# myCrew

./: README.md  pyproject.toml  report.md
src/varcrew/: crew.py  main.py
src/varcrew/agents/: portfolio_profiling.py
src/varcrew/tasks/portfolio_pro_task/: portfolio_profiling_task.py
src/varcrew/tools/: derivative_exposure.py  liquidity_evaluator.py  securities_classifier.py
